# SolarEclipseWorkbench

./: .gitignore  README.md  TODO.md  pyproject.toml
config/example sem scripts/: 80D.txt  8april2024.txt  EOSR.txt
config/scripts/: 20240408.txt  test.txt  testEOS80D.txt  testEOSR.txt  testNikon.txt  voice_prompts.txt
scripts/: 20250329.txt  convert_SEM_files.py  convert_sem_files.py  testEOS1000D.txt  testEOS80D.txt  voice_prompts.txt  voice_prompts_basic.txt
src/solareclipsetoolbox/: camera.py  notifications.py
src/solareclipseworkbench/: __init__.py  camera.py  gps.py  gui.py  location.py  notifications.py  notifications.txt  observer.py  reference_moments.py  schedule_test.py  scripts.py  sew.py  utils.py
