[tool.poetry]
name = "solareclipseworkbench"
version = "0.1.0"
description = "Tools to photograph solar eclipses"
authors = ["Sara Regibo <sararegibo@gmail.com>", "Wim De Meester <deepskywim@gmail.com"]
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/AstroWimSara/SolarEclipseWorkbench"
keywords = ["astronomy", "photography", "solar eclipse"]

[tool.poetry.dependencies]
python = "^3.9"
astropy = "^6.0.0"
gphoto2 = "^2.5.0"
geopandas = "^0.14.2"
matplotlib = "^3.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
