[tool.poetry]
name = "solareclipseworkbench"
version = "0.1.0"
description = "Tools to photograph solar eclipses"
authors = ["Sara Regibo <sararegibo@gmail.com>", "Wim De Meester <deepskywim@gmail.com"]
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/AstroWimSara/SolarEclipseWorkbench"
keywords = ["astronomy", "photography", "solar eclipse"]

[tool.poetry.dependencies]
python = "^3.9"
astropy = "^6.0.0"
geopandas = "^0.14.2"
matplotlib = "^3.8.2"
gphoto2 = "^2.5.0"
apscheduler = "^3.10.4"
geodatasets = "^2023.12.0"
sunpy = "^5.1.1"
jplephem = "^2.21"
scipy = "^1.12.0"
gpsdclient = "^1.3.2"
skyfield = "^1.47"
skyfield-data = "^5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
